--- a/Netease Music Wrapper/Base.lproj/MainMenu.xib
+++ b/Netease Music Wrapper/Base.lproj/MainMenu.xib
@@ -679,7 +679,9 @@
                 <subviews>
                     <webView translatesAutoresizingMaskIntoConstraints="NO" id="dav-cY-kie">
                         <rect key="frame" x="0.0" y="0.0" width="983" height="562"/>
-                        <webPreferences key="preferences" defaultFontSize="12" defaultFixedFontSize="12"/>
+                        <webPreferences key="preferences" defaultFontSize="12" defaultFixedFontSize="12">
+                            <nil key="identifier"/>
+                        </webPreferences>
                     </webView>
                 </subviews>
                 <constraints>
@@ -689,7 +691,34 @@
                     <constraint firstAttribute="bottom" secondItem="dav-cY-kie" secondAttribute="bottom" id="e74-vU-3Dn"/>
                 </constraints>
             </view>
+            <toolbar key="toolbar" implicitIdentifier="189637A1-C370-4976-BDEB-C47BE70FACA7" autosavesConfiguration="NO" displayMode="iconOnly" sizeMode="regular" id="ZhT-kV-f58">
+                <allowedToolbarItems>
+                    <toolbarItem implicitItemIdentifier="4421D5BF-25D4-4821-A11F-A57476BD13A2" label="" paletteLabel="" id="26Z-WV-xq1">
+                        <nil key="toolTip"/>
+                        <size key="minSize" width="67" height="28"/>
+                        <size key="maxSize" width="100" height="28"/>
+                        <segmentedControl key="view" verticalHuggingPriority="750" id="VdC-CJ-dxT">
+                            <rect key="frame" x="0.0" y="14" width="67" height="28"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            <segmentedCell key="cell" borderStyle="border" alignment="left" style="texturedSquare" trackingMode="momentary" id="10T-rK-Crv">
+                                <font key="font" metaFont="system"/>
+                                <segments>
+                                    <segment image="NSGoLeftTemplate" width="32"/>
+                                    <segment image="NSGoRightTemplate" width="32" tag="1"/>
+                                </segments>
+                            </segmentedCell>
+                        </segmentedControl>
+                    </toolbarItem>
+                </allowedToolbarItems>
+                <defaultToolbarItems>
+                    <toolbarItem reference="26Z-WV-xq1"/>
+                </defaultToolbarItems>
+            </toolbar>
             <point key="canvasLocation" x="556.5" y="459"/>
         </window>
     </objects>
+    <resources>
+        <image name="NSGoLeftTemplate" width="9" height="9"/>
+        <image name="NSGoRightTemplate" width="9" height="9"/>
+    </resources>
 </document>
