Support fullscreen mode.

--- a/Netease Music Wrapper/Base.lproj/MainMenu.xib
+++ b/Netease Music Wrapper/Base.lproj/MainMenu.xib
@@ -671,6 +671,7 @@
         </menu>
         <window title="Netease Music Wrapper" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
+            <windowCollectionBehavior key="collectionBehavior" fullScreenPrimary="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="223" y="198" width="983" height="562"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1440" height="878"/>
