--- a/Netease Music Wrapper/Base.lproj/MainMenu.xib
+++ b/Netease Music Wrapper/Base.lproj/MainMenu.xib
@@ -700,16 +700,16 @@
                 <allowedToolbarItems>
                     <toolbarItem implicitItemIdentifier="4421D5BF-25D4-4821-A11F-A57476BD13A2" label="" paletteLabel="" id="26Z-WV-xq1">
                         <nil key="toolTip"/>
-                        <size key="minSize" width="67" height="28"/>
+                        <size key="minSize" width="39" height="26"/>
                         <size key="maxSize" width="100" height="28"/>
                         <segmentedControl key="view" verticalHuggingPriority="750" id="VdC-CJ-dxT">
-                            <rect key="frame" x="0.0" y="14" width="67" height="28"/>
+                            <rect key="frame" x="0.0" y="14" width="55" height="26"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <segmentedCell key="cell" borderStyle="border" alignment="left" style="texturedSquare" trackingMode="momentary" id="10T-rK-Crv">
                                 <font key="font" metaFont="system"/>
                                 <segments>
-                                    <segment image="NSGoLeftTemplate" width="32"/>
-                                    <segment image="NSGoRightTemplate" width="32" tag="1"/>
+                                    <segment image="NSGoLeftTemplate" width="26" enabled="NO"/>
+                                    <segment image="NSGoRightTemplate" width="26" tag="1"/>
                                 </segments>
                             </segmentedCell>
                             <connections>
